# tapauth

./: .dockerignore  .gitignore  100_PERCENT_COMPLIANCE.md  100_PERCENT_COMPLIANCE.md.backup  AGENTS.md  BLUETOOTH_SETUP.md  CLIENT_COMPLIANCE_CHECKLIST.md  CLIENT_COMPLIANCE_REPORT.md  CLIENT_P2_COMPLETION_REPORT.md  CLIENT_P3_COMPLETION_REPORT.md  CLIENT_VERIFICATION_SUMMARY.md  CNAME  COMPLETE_COMPLIANCE_SUMMARY.md  COMPLIANCE_CHECKLIST.md  CUSTOM_PAM_BINDINGS.md  Cargo.toml  DEV-SCRIPTS-README.sh  DEV-SCRIPTS-REFERENCE.md  DEVELOPMENT.md  DEVENV_BUGFIX.md  DEV_ENVIRONMENT_COMPLETE.md  DOCKER-TO-VM-MIGRATION.md  Dockerfile.dev  FEATURE_COMPLETE_STATUS.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MULTI_USER_PAIRING_REMOVAL.md  P2_ENHANCEMENTS_COMPLETE.md  PAIRING_PROTOCOL_FIX.md  PAIRING_PROTOCOL_MISMATCH.md  PAM_TESTING_NOTES.md  QUICKSTART-DEV.md  SPECIFICATION_COMPLIANCE_REVIEW.md  USER_SPECIFIC_PAIRING_IMPLEMENTATION.md  VM-DEVELOPMENT.md  VM-INITIALIZATION-GUIDE.md  VM-MIGRATION-SUMMARY.md  VM-SETUP-VALIDATION.md  build-test-pam.sh  (+25 more)
.github/workflows/: ci-android.yml  ci.yml  release-android.yml  release-arch.yml  release-fedora.yml  release-ubuntu.yml  release.yml
ble-daemon/: Cargo.toml  dev.rourunisen.tapauth.BLE.conf  dev.rourunisen.tapauth.BLE.service  install.sh  tapauth-ble-daemon.service  uninstall.sh
ble-daemon/src/: ble_handler.rs  dbus_interface.rs  main.rs
client-config-gui/: Cargo.toml  PRIVILEGE_ESCALATION.md  README.md  build-test-gui.sh  build.rs  dev.rourunisen.tapauth.policy  install.sh  tapauth-config.desktop  uninstall.sh
client-config-gui/locales/de/: main.ftl
client-config-gui/locales/en/: main.ftl
client-config-gui/locales/ja/: main.ftl
client-config-gui/src/: app.rs  ipc.rs  l10n.rs  locales_codegen.rs  logging.rs  main.rs  pairing.rs  polkit.rs  screens.rs  utils.rs
client-config-gui/src/pairing/: mod.rs  session.rs
client-config-gui/src/screens/: device_list.rs  main_menu.rs  mod.rs  pairing.rs  settings.rs
client-config-gui/src/utils/: elevation.rs  mod.rs  service.rs  system_check.rs
client-pam/: Cargo.toml  build-test-pam.sh  build.rs  pam_install.sh  pam_uninstall.sh  wrapper.h
client-pam/locales/de/: main.ftl
client-pam/locales/en/: main.ftl
client-pam/locales/ja/: main.ftl
client-pam/src/: auth_client.rs  ble_advertiser.rs  ble_client.rs  config.rs  error.rs  ipc_client.rs  lib.rs  locales_codegen.rs  logging.rs  pam_logic.rs  pam_messages.rs  pam_sys.rs  transport.rs
docs/: SELINUX.md  TPM_SUPPORT.md  TPM_SUPPORT.md.bak
docs/design-documents/protocol/: authentication-flow.md  ble-gatt-specification.md  cryptography-specification.md  device-lifecycle.md  initial-key-exchange.md  language-used.md  security-hardening.md  user-authentication-flow.md
docs/design-documents/protocoll/: authentication-flow.md  ble-gatt-specification.md  initial-key-exchange.md  security-hardening.md  user-authentication-flow.md
fdroid/: config.yml
fdroid/metadata/dev.rourunisen.tapauth/en-US/: full_description.txt
fdroid/repo/dev.rourunisen.tapauth/en-US/: short_description.txt
packaging/: 50-tapauthd.rules  debian.pam-config  gdm-fingerprint  kde-fingerprint  net.reactivated.Fprint.service  net.reactivated.Fprint.tapauth.conf  pam-config.example  sysusers.conf  tapauth.spec  tapauthd.pkla  tmpfiles.conf
proto/: auth_protocol.proto  ipc.proto
scripts/: bluetooth-check.sh  build-test-fprintd.sh  patch_fdroid_index.py  vm-build.sh  vm-clean.sh  vm-config.sh  vm-console-access.sh  vm-setup.sh  vm-shell.sh  vm-start.sh  vm-stop.sh  vm-test.sh  vm-udev-cleanup.sh  vm-udev-setup.sh
server-android/: BUILD_NATIVE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROTOCOL_IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  build-native.sh  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
server-android/app/: build.gradle.kts
server-android/app/src/androidTest/java/dev/rourunisen/tapauth/: ExampleInstrumentedTest.kt
server-android/app/src/androidTest/java/dev/rourunisen/tapauth/crypto/: TapAuthCryptoTest.kt  TapAuthTestRunner.kt  TestTapAuthApplication.kt
server-android/app/src/main/: AndroidManifest.xml
server-android/app/src/main/java/dev/rourunisen/tapauth/: BiometricPromptActivity.kt  BootReceiver.kt  MainActivity.kt  TapAuthApplication.kt
server-android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
server-android/app/src/main/res/values/: strings.xml  themes.xml
server-android/app/src/main/res/values-de/: strings.xml
server-android/app/src/main/res/values-ja/: strings.xml
server-android/app/src/main/res/xml/: data_extraction_rules.xml
server-android/app/src/test/java/dev/rourunisen/tapauth/: ExampleUnitTest.kt
server-android/gradle/: libs.versions.toml
server-android/gradle/wrapper/: gradle-wrapper.properties
shared/: Cargo.toml  build.rs
shared/src/: config.rs  crypto.rs  dbus_interface.rs  error.rs  firewall.rs  jni.rs  jni_api.rs  l10n.rs  lib.rs  models.rs  network.rs  protocol.rs  tpm.rs
shared/src/config/: mod.rs  toml_config.rs
shared/src/crypto/: encryption.rs  kdf.rs  keys.rs  mod.rs  signing.rs  temporal.rs
shared/src/ipc/: mod.rs
shared/src/jni/: arrays.rs  conversions.rs  exceptions.rs  mod.rs  objects.rs  protobuf.rs
shared/src/models/: mod.rs
shared/src/network/: discovery.rs  mod.rs  tcp.rs  udp.rs
shared/src/protocol/: messages.rs  mod.rs  packet.rs  pairing.rs
shared/tests/: jni_panic_recovery.rs
systemd/: tapauthd.service  tapauthd.socket
systemd/polkit-agent-helper@.service.d/: tapauth.conf
tapauthd/: Cargo.toml  dev.rourunisen.tapauth.config.admin.policy  org.tapauth.config.admin.policy
tapauthd/src/: admin_handler.rs  auth_handler.rs  fprintd.rs  logging.rs  main.rs  peer_identity.rs  polkitauth.rs  transport.rs
tapauthd/src/transport/: ble.rs  types.rs  udp.rs
tests/: Cargo.toml  README.md  build.rs  error_scenarios.rs  integration_test.rs  run-integration-tests.sh
(+32 files in other folders)
