[workspace]
resolver = "2"
members = ["shared", "client-pam", "client-config-gui", "tapauthd"]

[workspace.dependencies]
# Shared library (used by all consuming crates)
shared = { path = "shared" }

# Serialization
prost = "0.14"
prost-build = "0.14"
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Networking
socket2 = "0.6"
if-addrs = "0.15"

# Utilities
hex = "0.4"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
getrandom = "0.4"
libc = "0.2"
chrono = "0.4"
once_cell = "1.21"
nix = { version = "0.31", features = ["user"] }
secrecy = "0.10"
serde_json = "1.0"
local-ip-address = "0.6"
whoami = "2.1"
hostname = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
