[package]
name = "ble-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapauth-ble-daemon"
path = "src/main.rs"

[dependencies]
# Shared library with protocol definitions
shared = { path = "../shared", features = ["dbus"] }

# BLE support
bluer = { version = "0.17", features = ["bluetoothd"] }
futures-util = "0.3"

# D-Bus for IPC
zbus = { version = "4.0", default-features = false, features = ["tokio"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
prost = "0.14"
hex = "0.4"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
