[package]
name = "ble-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapauth-ble-daemon"
path = "src/main.rs"

[dependencies]
# Shared library with protocol definitions
shared = { workspace = true, features = ["dbus"] }

# BLE support
bluer = { version = "0.17", features = ["bluetoothd"] }
futures-util = "0.3"

# D-Bus for IPC
zbus = { workspace = true, features = ["tokio"] }

# Async runtime
tokio.workspace = true

# Serialization
prost.workspace = true
hex.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow = "1.0"
