[package]
name = "client-config-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapauth-config"
path = "src/main.rs"

[dependencies]
shared = { workspace = true, features = ["firewall"] }

# GUI framework
iced = { version = "0.13", features = ["tokio", "qr_code", "image"] }

# QR code generation
qrcode = "0.14"

# Async runtime
tokio.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
hex.workspace = true
chrono.workspace = true
libc.workspace = true
nix.workspace = true
local-ip-address = "0.6"
lazy_static = "1.5"
whoami = "1.5"
native-dialog = "0.9"
lucide-icons = { version = "1.16", features = ["iced"] }

[features]
default = []
tpm = ["shared/tpm"]
