[package]
name = "client-config-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapauth-config"
path = "src/main.rs"

[dependencies]
shared = { workspace = true, features = ["firewall"] }

iced = { version = "0.14", features = [
    "advanced-shaping",
    "wgpu",
    "canvas",
    "tokio",
    "qr_code",
    "image",
] } # GUI framework
fluent = "0.17"
unic-langid = "0.9"

# QR code generation
qrcode = "0.14"

# Async runtime
tokio.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
hex.workspace = true
chrono.workspace = true
libc.workspace = true
nix.workspace = true
prost.workspace = true
bytes.workspace = true
local-ip-address = { workspace = true }
whoami = { workspace = true }
native-dialog = "0.9"
lucide-icons = "1.16"

[features]
default = []
tpm = ["shared/tpm"]
