[package]
name = "client-pam"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { workspace = true }

# Protocol buffers
prost.workspace = true
bytes.workspace = true

# Polling and fcntl (single-threaded)
nix = { version = "0.29", features = ["poll", "fs"] }

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
getrandom.workspace = true
hex.workspace = true
libc.workspace = true

[features]
default = []
