[package]
name = "client-pam"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { workspace = true }

# Protocol buffers
prost.workspace = true
bytes.workspace = true

# Polling and fcntl (single-threaded)
nix = { workspace = true, features = ["poll", "fs", "user"] }

# Configuration
serde = { workspace = true }
toml = { workspace = true }

# Utilities
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
getrandom.workspace = true
hex.workspace = true
libc.workspace = true

[features]
default = []
tpm = ["shared/tpm"]
# dev-socket-override: enable TAPAUTHD_SOCK env var to override the default
# IPC socket path.  This is for development/testing only — production builds
# must NOT enable this feature, as it would allow environment-controlled
# socket redirection which could bypass authentication.
dev-socket-override = []
