[package]
name = "shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Cryptography
aes-gcm = "0.10"
ed25519-dalek = { version = "3.0.0-pre.1", features = [
    "rand_core",
    "serde",
    "zeroize",
] }
x25519-dalek = { version = "3.0.0-pre.1", features = [
    "serde",
    "static_secrets",
    "zeroize",
] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand_core = "0.9"
getrandom = "0.2"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Utilities
hex = "0.4"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
libc = "0.2"

# JNI support (optional)
jni = { version = "0.21", optional = true }

[build-dependencies]
prost-build = "0.13"

[features]
default = []
jni = ["dep:jni"]

[dev-dependencies]
tokio-test = "0.4"
