[package]
name = "shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
aes-gcm = "0.11.0-rc.1"
ed25519-dalek = { version = "3.0.0-pre.1", features = [
    "rand_core",
    "serde",
    "zeroize",
] }
x25519-dalek = { version = "3.0.0-pre.1", features = [
    "serde",
    "static_secrets",
    "zeroize",
] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
zeroize = { version = "1.8", features = ["derive"] }
secrecy.workspace = true

# Serialization
prost.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Async runtime
tokio.workspace = true

# Utilities
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom.workspace = true
libc.workspace = true
chrono = { workspace = true, features = ["serde"] }
if-addrs.workspace = true
hostname = "0.4"
socket2.workspace = true
nix.workspace = true

# JNI support (optional)
jni = { version = "0.21", optional = true }

[build-dependencies]
prost-build.workspace = true

[features]
default = []
jni = ["dep:jni"]
