[package]
name = "tapauthd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
shared = { path = "../shared", features = ["firewall"] }
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
] }
getrandom = { workspace = true }
nix = { workspace = true, features = ["user", "socket"] }
socket2 = { workspace = true }
hex = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde_json = "1.0"
chrono = { workspace = true, features = ["serde"] }
local-ip-address = "0.6"
whoami = "2.1"

# BLE support
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }

[features]
default = ["ble", "firewall"]
ble = ["bluer"]
tpm = ["shared/tpm"]
firewall = ["shared/firewall"]
fallback-socket = [
] # Enable manual socket binding for development/testing (production uses systemd socket activation)
