[package]
name = "tapauthd"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["firewall"] }
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "signal",
    "sync",
] }
getrandom = { workspace = true }
nix = { workspace = true, features = ["user", "socket"] }
socket2 = { workspace = true }
hex = { workspace = true }
zbus = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
local-ip-address = { workspace = true }
whoami = { workspace = true }

# BLE support
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }

[features]
default = ["ble", "firewall"]
ble = ["bluer"]
tpm = ["shared/tpm"]
firewall = ["shared/firewall"]
fallback-socket = [
] # Enable manual socket binding for development/testing (production uses systemd socket activation)
